# ComfyUI-QwenImageLoraLoader

./: .git-batch-rewrite.sh  .git-env-filter.sh  .git-fix-one-commit.sh  .git-rewrite-callback.py  .gitignore  .tracking  AWQ_MODULATION_LORA_EXPLANATION.md  COMFYUI_0.4.0_UPDATE_ERROR_FIXES.md  COMFYUI_PR_PROPOSAL.md  DIFFSYNTH_CONTROLNET_NUNCHAKU_IMPLEMENTATION.md  EVIDENCE_v243_EN_ONLY.md  INSTALLATION.md  ISSUE_33_FIX_EXPLANATION.md  LICENSE  PR34_COMFYUI_V0.6.0_COMPATIBILITY.md  README.md  README.md.backup  README.zh.md  RELEASE_NOTES_COMPLETE.txt  RELEASE_NOTES_v1.60.md  RELEASE_v1.57.md  RELEASE_v1.57_GITHUB.txt  RELEASE_v1.60.md  V2.0_ROOT_CAUSE_ANALYSIS.md  WHY_NO_EDIT_SEPARATION_JP.md  ZIMAGETURBO_CONTROLNET_FIX.md  __init__.py  _evidence_en_only.py  _evidence_v243.py  _extract_cursor_crimes.py  _temp_zimage_copy.py  analyze_snofs.py  append_integration.py  current_release.txt  do_checkout_pr49.ps1  do_merge_pr49.ps1  filter_branch.ps1  filter_branch.sh  filter_callback.py  install_qwen_lora.bat  (+18 more)
RELEASE_NOTES/: RELEASE_NOTES_V1.0.0_TO_V1.57.md  RELEASE_NOTES_V1.6.0_TO_V2.2.8.md  RELEASE_NOTES_V2.2.5.md  RELEASE_NOTES_V2.2.7.md  RELEASE_NOTES_V2.2.8.md  RELEASE_NOTES_V2.3.0.md  RELEASE_NOTES_V2.3.0_TO_V2.3.9.md  RELEASE_NOTES_V2.3.6.md  RELEASE_NOTES_V2.3.7.md  RELEASE_NOTES_V2.4.0.md  changelog.md  v1.56.md  v1.63.md  v1.70.md  v1.71.md  v2.1.0.md  v2.2.0.md  v2.4.4.md  v2.4.5.md  v2.4.6.md  v2.4.7.md  v2.5.0.md
backups/: qwenimage_v2_working_20251205_225501.py  z_qwen_lora_dynamic_working_20251205_225501.js
js/: widgethider.js  z_qwen_lora_dynamic.js  (+7 more)
(+83 files in other folders)
